# cfn-lsp

./: .gitignore  .gitmodules  CLAUDE.md  go.mod  go.sum  main.go  mise.toml  nvim.lua  proxy.go  radebug.lua  radebug.sh  run_nvim.sh  rust-toolchain.toml  template.json  template.yml
crates/cfn-lsp/: Cargo.toml
crates/cfn-lsp/src/: destinations.rs  main.rs  parsing.rs  queries.rs
crates/cfn-lsp/src/queries/: dependson.json.scm  dependson.scm  findinmap.json.scm  findinmap.scm  getatt.json.scm  getatt.scm  if.json.scm  if.scm  ref.json.scm  ref.scm  sub.json.scm  sub.scm
crates/cfn-lsp/src/snapshots/: cfn_lsp__destinations__tests__definitions__parse_conditions.snap  cfn_lsp__destinations__tests__definitions__parse_mappings.snap  cfn_lsp__destinations__tests__parse_parameters.snap  cfn_lsp__destinations__tests__parse_simple.snap  cfn_lsp__destinations__tests__parse_simple.snap.new  cfn_lsp__destinations__tests__parse_two_resources.snap  cfn_lsp__destinations__tests__parse_two_resources.snap.new  cfn_lsp__destinations__tests__parse_with_outputs.snap  cfn_lsp__parsing__tests__parse_basic_template.snap.new  cfn_lsp__queries__tests__dependsons__extract_from_dependson.snap  cfn_lsp__queries__tests__extract_from_outputs.snap  cfn_lsp__queries__tests__extract_from_parameters.snap  cfn_lsp__queries__tests__extract_from_template.snap  (+10 more)
crates/cfn-lsp/testdata/: dependson.yml  findinmap.yml  fn_sub.yml  getatt.yml  if.yml  outputs.yml  parameters.yml  simple.yml  sub_inline.json  subs.yml  two_resources.yml
handlers/: definition.go  (+1 more)
poc/: Cargo.toml
poc/src/: main.rs
(+23 files in other folders)
