[package]
name = "cfn-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
spanned_json_parser = "0.2.0"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
yaml-rust = "0.4.5"
cfn-lsp-schema = { path = "../cfn-lsp-schema" }
tower-lsp = "0.20.0"

[build-dependencies]
quote = "1.0.40"
prettyplease = "0.2"
syn = { version = "2", default-features = false, features = [
    "full",
    "parsing",
] }

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }

